syntax = "proto3";

option go_package = "./proto;transport";

package go.micro.transport.grpc;

service Transport {
	rpc Stream(stream Message) returns (stream Message) {}
}

message Message {
	map<string, string> header = 1;
	bytes body = 2;
}
